Use application/octet-stream on file uploads.
